# docs/swagger.json
@@ -4,14 +4,72 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/sys/roles": {
-            "get": {
-                "description": "这是一段接口描述\nCode 角色编码\nName 角色名称",
+        "/api/v1/sys/dept": {
+            "post": {
+                "description": "这是一段接口描述",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "系统管理"
+                    "部门管理"
+                ],
+                "summary": "新增部门",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/sys/dept/:id": {
+            "put": {
+                "description": "这是一段接口描述",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "部门管理"
+                ],
+                "summary": "更新部门",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "这是一段接口描述",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "部门管理"
+                ],
+                "summary": "删除部门",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/sys/roles": {
+            "get": {
+                "description": "这是一段接口描述",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "角色管理"
                 ],
                 "summary": "获取角色列表",
                 "parameters": [
@@ -34,7 +92,14 @@
                         "in": "query"
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             },
             "post": {
                 "description": "这是一段接口描述",
@@ -42,7 +107,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "系统管理"
+                    "角色管理"
                 ],
                 "summary": "新增角色",
                 "responses": {
@@ -62,9 +127,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "系统管理"
+                    "角色管理"
                 ],
-                "summary": "编辑角色",
+                "summary": "更新角色",
                 "responses": {
                     "200": {
                         "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
@@ -80,7 +145,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "系统管理"
+                    "角色管理"
                 ],
                 "summary": "删除角色",
                 "responses": {
